--- a/base/build.gradle
+++ b/base/build.gradle
@@ -14,6 +14,7 @@ dependencies {
     api 'org.slf4j:slf4j-api'
 
     compileOnly 'org.osgi:osgi.annotation'
+    compileOnly "com.fasterxml.jackson.core:jackson-annotations:$jacksonVersion"
 
     testImplementation "org.assertj:assertj-core:$assertjVersion"
 }
