--- a/build.gradle
+++ b/build.gradle
@@ -94,6 +94,10 @@ subprojects {
         }
     }
 
+    ext {
+        releasable = true // all corda-api jars are for external comsumtion
+    }
+
     version rootProject.version
     group 'net.corda'
 
@@ -264,6 +268,14 @@ subprojects {
 
     tasks.register('allDependencyInsight', DependencyInsightReportTask)
     tasks.register('allDependencies', DependencyReportTask)
+
+    tasks.register('listReleasableSoftware'){
+        description = "Prints a list of all modules which will be released externally"
+        group = "Release"
+        if(project.hasProperty('releasable')){
+            logger.quiet("$project.name")
+        }
+    }
 }
 
 // report updatable dependencies: gradle dependencyUpdates
