--- a/settings.gradle
+++ b/settings.gradle
@@ -102,6 +102,7 @@ include 'ledger:ledger-common'
 include 'ledger:ledger-consensual'
 include 'membership'
 include 'serialization'
+include 'uniqueness'
 
 
 gradleEnterprise {
