[WIP] Adding UTXO APIs

--- a/ledger/ledger-utxo/build.gradle
+++ b/ledger/ledger-utxo/build.gradle
@@ -17,6 +17,7 @@ dependencies {
 
     api project(":application")
     api project(":crypto")
+    api project(":cipher-suite")
     implementation project(":membership")
     implementation project(":serialization")
     implementation project(":ledger:ledger-common")
