--- a/corda-api/build.gradle
+++ b/corda-api/build.gradle
@@ -20,6 +20,7 @@ dependencies {
         api project(':data:db-schema')
         api project(':ledger:ledger-common')
         api project(':ledger:ledger-consensual')
+        api project(':ledger:ledger-utxo')
         api project(':ledger-obsolete')
         api project(':membership')
         api project(':serialization')
