--- a/ledger/ledger-utxo/build.gradle
+++ b/ledger/ledger-utxo/build.gradle
@@ -4,16 +4,17 @@ plugins {
     id 'org.jetbrains.kotlin.jvm'
 }
 
-description 'Corda Membership'
+description 'Corda Uniqueness'
 
 dependencies {
-    api platform(project(':corda-api'))
     api 'net.corda.kotlin:kotlin-stdlib-jdk8-osgi'
 
-    compileOnly 'org.osgi:osgi.annotation'
+    api platform(project(':corda-api'))
 
     api project(':application')
     api project(':base')
     api project(':crypto')
-    api project(':data:avro-schema')
+
+    compileOnly 'org.osgi:osgi.core'
+    compileOnly 'org.osgi:osgi.annotation'
 }
