Revert removal of events topic

--- a/data/topic-schema/src/main/resources/net/corda/schema/Membership.yaml
+++ b/data/topic-schema/src/main/resources/net/corda/schema/Membership.yaml
@@ -1,4 +1,9 @@
 topics:
+  MembershipEventTopic:
+    name: membership.event
+    consumers:
+    producers:
+    config:
   MembershipRegistrationTopic:
     name: membership.registration
     consumers:
