--- a/data/avro-schema/build.gradle
+++ b/data/avro-schema/build.gradle
@@ -15,6 +15,7 @@ dependencies {
 
     implementation platform(project(':corda-api'))
     implementation project(":base")
+    implementation project(":base:base-utils")
     implementation 'net.corda.kotlin:kotlin-stdlib-jdk8-osgi'
 
     compileOnly 'org.osgi:osgi.annotation'
