--- a/data/config-schema/build.gradle
+++ b/data/config-schema/build.gradle
@@ -10,6 +10,7 @@ dependencies {
     implementation 'net.corda.kotlin:kotlin-stdlib-jdk8-osgi'
     implementation platform(project(':corda-api'))
     implementation project(":base")
+    implementation project(":base:base-utils")
 
     compileOnly 'org.osgi:osgi.annotation'
     compileOnly "org.osgi:osgi.core"
