--- a/base/build.gradle
+++ b/base/build.gradle
@@ -1,20 +1,16 @@
 plugins {
     id 'corda-api.common-library'
-    id 'org.jetbrains.kotlin.jvm'
     id 'corda.common-publishing'
+    id 'corda.java-only'
 }
 
 description 'Corda Base'
 
 dependencies {
     implementation platform(project(':corda-api'))
-    api 'net.corda.kotlin:kotlin-stdlib-jdk8-osgi'
-    // Concluded this is the one acceptable dependency in addition to kotlin.
-    // We are also returning `Logger` from extensions methods like `Any.contextLogger()` hance "api"
-    api 'org.slf4j:slf4j-api'
-
     compileOnly 'org.osgi:osgi.annotation'
 
     testImplementation "org.assertj:assertj-core:$assertjVersion"
+    testImplementation "org.mockito:mockito-core:$mockitoVersion"
 }
 
