--- a/ledger/ledger-utxo/build.gradle
+++ b/ledger/ledger-utxo/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'org.jetbrains.kotlin.jvm'
 }
 
-description 'Corda Uniqueness'
+description 'Corda UTXO Ledger'
 
 dependencies {
     api 'net.corda.kotlin:kotlin-stdlib-jdk8-osgi'
