CORE-6627: Fix Java incompatibility of our serialization API.

--- a/buildSrc/src/main/groovy/corda-api.common-library.gradle
+++ b/buildSrc/src/main/groovy/corda-api.common-library.gradle
@@ -22,6 +22,7 @@ configurations {
 
 
 dependencies {
+    compileOnly "org.jetbrains:annotations:$jetbrainsAnnotationsVersion"
     testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
     testImplementation "org.junit.jupiter:junit-jupiter-params:$junitVersion"
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
