--- a/gradle.properties
+++ b/gradle.properties
@@ -7,11 +7,14 @@ cordaProductVersion = 5.0.0
 # NOTE: update this each time this module contains a breaking change
 ## NOTE: currently this is a top level revision, so all API versions will line up, but this could be moved to
 ##   a per module property in which case module versions can change independently.
-cordaApiRevision = 178
+cordaApiRevision = 179
 
 # Main
 kotlinVersion = 1.7.10
 kotlin.stdlib.default.dependency = false
+
+# These are the same annotations that Kotlin uses.
+jetbrainsAnnotationsVersion = 13.0
 
 # at the moment, required for packaging to build test cpks for unit tests
 gradlePluginsVersion = 6.0.0-BETA17
