CORE-6627: Fix publishing of Java artifacts.

--- a/buildSrc/src/main/groovy/corda.java-only.gradle
+++ b/buildSrc/src/main/groovy/corda.java-only.gradle
@@ -1,3 +1,9 @@
 pluginManager.withPlugin('org.jetbrains.kotlin.jvm') {
     throw new StopExecutionException("Module '${project.path}' should only contain Java classes")
 }
+
+pluginManager.withPlugin('java') {
+    java {
+        withJavadocJar()
+    }
+}
