--- a/buildSrc/src/main/groovy/corda.common-publishing.gradle
+++ b/buildSrc/src/main/groovy/corda.common-publishing.gradle
@@ -11,22 +11,26 @@ if (System.getenv('CORDA_ARTIFACTORY_USERNAME') != null || project.hasProperty('
             publications {
                 register('maven', MavenPublication) { mvn ->
                     afterEvaluate {
-                        artifactId = tasks.named('jar', Jar).flatMap { it.archiveBaseName }.get()
-                        groupId group.toString()
-                        from components.findByName('cordapp') ?: components.findByName('kotlin') ?: components.java
+                        mvn.artifactId = tasks.named('jar', Jar).flatMap { Jar jar -> jar.archiveBaseName }.get()
+                        mvn.groupId group.toString()
+                        mvn.from components.findByName('cordapp') ?: components.findByName('kotlin') ?: components.java
 
-                        try {
-                            artifact tasks.named('sourcesJar', Jar)
-                        } catch (UnknownTaskException ignored) {
+                        if (mvn.artifacts.matching { MavenArtifact a -> a.classifier == 'sources' }.isEmpty()) {
+                            try {
+                                mvn.artifact tasks.named('sourcesJar', Jar)
+                            } catch (UnknownTaskException ignored) {
+                            }
                         }
 
-                        try {
-                            artifact tasks.named('javadocJar', Jar)
-                        } catch (UnknownTaskException ignored) {
+                        if (mvn.artifacts.matching { MavenArtifact a -> a.classifier == 'javadoc' }.isEmpty()) {
+                            try {
+                                mvn.artifact tasks.named('javadocJar', Jar)
+                            } catch (UnknownTaskException ignored) {
+                            }
                         }
 
-                        mvn.artifacts = mvn.artifacts.findAll { a ->
-                            !(a instanceof MavenArtifact) || a.classifier != 'ignore'
+                        mvn.artifacts = mvn.artifacts.findAll { MavenArtifact a ->
+                            a.classifier != 'ignore'
                         }
                     }
                 }
