NOTICK: test publishing

--- a/gradle.properties
+++ b/gradle.properties
@@ -30,7 +30,7 @@ artifactoryContextUrl = https://software.r3.com/artifactory
 # Gradle
 # dokka need more metaspace - https://github.com/Kotlin/dokka/issues/1405
 org.gradle.jvmargs=-XX:MaxMetaspaceSize=2g
-internalPublishVersion = 1.+
+internalPublishVersion = alpha-1662706523445
 dokkaVersion = 1.7.+
 detektPluginVersion = 1.21.+
 dependencyCheckVersion=0.42.+
