--- a/settings.gradle
+++ b/settings.gradle
@@ -79,6 +79,18 @@ dependencyResolutionManagement {
                     password = settings.ext.find('cordaArtifactoryPassword') ?: System.getenv('CORDA_ARTIFACTORY_PASSWORD')
                 }
             }
+
+                maven {  
+                url "${artifactoryContextUrl}/engineering-tools-maven-unstable"
+
+                authentication {
+                    basic(BasicAuthentication)
+                }
+                credentials {
+                    username = settings.ext.find('cordaArtifactoryUsername') ?: System.getenv('CORDA_ARTIFACTORY_USERNAME')
+                    password = settings.ext.find('cordaArtifactoryPassword') ?: System.getenv('CORDA_ARTIFACTORY_PASSWORD')
+                }
+            }
         }
     }
 }
