CORE-5088 Virtual node schema renamed to LEDGER_PERSISTENCE_TOPIC

--- a/data/topic-schema/src/main/resources/net/corda/schema/VirtualNode.yaml
+++ b/data/topic-schema/src/main/resources/net/corda/schema/VirtualNode.yaml
@@ -46,6 +46,11 @@ topics:
     consumers:
     producers:
     config:
+  VirtualNodeLedgerPersistenceTopic:
+    name: virtual.node.ledger.persistence
+    consumers:
+    producers:
+    config:
   VirtualNodeManagementTopic:
     name: virtual.node.management
     consumers:
