--- a/build.gradle
+++ b/build.gradle
@@ -210,7 +210,7 @@ subprojects {
     // required until detekt plugin updates it's internal version of snakeYaml, not fixed as of detekt version 1.21
     pluginManager.withPlugin('io.gitlab.arturbosch.detekt') {
       dependencies {
-            detekt "org.yaml:snakeyaml:1.31"
+            detekt "org.yaml:snakeyaml:$snakeyamlVersion"
       }
     }
 
