--- a/gradle.properties
+++ b/gradle.properties
@@ -35,6 +35,7 @@ dokkaVersion = 1.7.+
 detektPluginVersion = 1.21.+
 dependencyCheckVersion=0.42.+
 artifactoryPluginVersion = 4.28.2
+snakeyamlVersion=1.32
 
 # Logging
 slf4jVersion = 1.7.36
