CORE-6681: ensure jsoup uses latest version

--- a/build.gradle
+++ b/build.gradle
@@ -6,8 +6,16 @@ buildscript {
     ext {
         vcsUrl = System.getenv('GIT_URL') ?: 'https://github.com/corda/corda-api.git'
     }
+    
+    dependencies {
+        classpath "org.jetbrains.dokka:dokka-core:$dokkaVersion"
+        constraints {
+            classpath("org.jsoup:jsoup:1.15.3") {
+                because "required until dokka plugin updates it's internal version of jsoup, not fixed as of dokka 1.7.10"
+            }
+        }
+    }
 }
-
 
 plugins {
     id 'net.corda.cordapp.cordapp-configuration'
