--- a/build.gradle
+++ b/build.gradle
@@ -134,6 +134,7 @@ subprojects {
             testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
 
             detektPlugins "io.gitlab.arturbosch.detekt:detekt-formatting:$detektPluginVersion"
+
         }
 
         // Making all persistence entity open and with an empty constructor to allow Hibernate to work.
@@ -155,7 +156,7 @@ subprojects {
 
         configurations.all {
             resolutionStrategy.dependencySubstitution {
-                substitute module('org.jsoup:jsoup:1.14.3') using module('org.jsoup:jsoup:1.15.3')
+                substitute module('org.jsoup:jsoup') using module('org.jsoup:jsoup:1.15.3')
             }
         }
 
