--- a/build.gradle
+++ b/build.gradle
@@ -6,15 +6,6 @@ buildscript {
     ext {
         vcsUrl = System.getenv('GIT_URL') ?: 'https://github.com/corda/corda-api.git'
     }
-    
-    dependencies {
-        classpath "org.jetbrains.dokka:dokka-core:$dokkaVersion"
-        constraints {
-            classpath("org.jsoup:jsoup:1.15.3") {
-                because "required until dokka plugin updates it's internal version of jsoup, not fixed as of dokka 1.7.10"
-            }
-        }
-    }
 }
 
 plugins {
@@ -159,6 +150,12 @@ subprojects {
         configurations {
             [ compileClasspath, testCompileClasspath, runtimeClasspath, testRuntimeClasspath ].forEach { cfg ->
                 configureKotlinForOSGi(cfg)
+            }
+        }
+
+        configurations.all {
+            resolutionStrategy.dependencySubstitution {
+                substitute module('org.jsoup:jsoup') using module('org.jsoup:jsoup:1.15.3')
             }
         }
 
