CORE-6376: use correct URL

--- a/gradle.properties
+++ b/gradle.properties
@@ -20,9 +20,8 @@ jetbrainsAnnotationsVersion = 13.0
 gradlePluginsVersion = 6.0.0-BETA17
 
 # License
-## TODO: Change to correct name and URL
 licenseName = Corda Pre-Release Software License Agreement
-licenseUrl = https://www.r3.com/wp-content/uploads/2020/07/Corda-Pre-Release-Software-License-Agreement.pdf
+licenseUrl = https://www.corda.net/wp-content/uploads/2021/09/Corda-Pre-Release-Software-License-Agreement.pdf
 
 # Artifactory
 artifactoryContextUrl = https://software.r3.com/artifactory
