CORE-5552 Updates from PR feedback.

--- a/ledger/ledger-utxo/build.gradle
+++ b/ledger/ledger-utxo/build.gradle
@@ -18,4 +18,6 @@ dependencies {
 
     compileOnly 'org.osgi:osgi.core'
     compileOnly 'org.osgi:osgi.annotation'
+
+    testImplementation "org.assertj:assertj-core:$assertjVersion"
 }
