--- a/data/topic-schema/src/main/resources/net/corda/schema/Membership.yaml
+++ b/data/topic-schema/src/main/resources/net/corda/schema/Membership.yaml
@@ -20,6 +20,11 @@ topics:
     consumers:
     producers:
     config:
+  MembershipReregistrationTopic:
+    name: membership.reregistration
+    consumers:
+    producers:
+    config:
   MembershipRegistrationStateTopic:
     name: membership.registration.state
     consumers:
