--- a/data/topic-schema/src/main/resources/net/corda/schema/VirtualNode.yaml
+++ b/data/topic-schema/src/main/resources/net/corda/schema/VirtualNode.yaml
@@ -41,6 +41,11 @@ topics:
     consumers:
     producers:
     config:
+  VirtualNodeUpgradeTopic:
+    name: virtual.node.upgrade
+    consumers:
+    producers:
+    config:
   VirtualNodeCreationRequestTopic:
     name: virtual.node.creation.request
     consumers:
