CORE-5075 - add vnode status topic

--- a/data/topic-schema/src/main/resources/net/corda/schema/VirtualNode.yaml
+++ b/data/topic-schema/src/main/resources/net/corda/schema/VirtualNode.yaml
@@ -46,6 +46,11 @@ topics:
     consumers:
     producers:
     config:
+  VirtualNodeUpgradeStatusTopic:
+    name: virtual.node.upgrade.status
+    consumers:
+    producers:
+    config:
   VirtualNodeCreationRequestTopic:
     name: virtual.node.creation.request
     consumers:
