CORE-7071: Include `rbac-schema` to API

--- a/corda-api/build.gradle
+++ b/corda-api/build.gradle
@@ -19,6 +19,7 @@ dependencies {
         api project(':data:db-schema')
         api project(':data:membership-schema')
         api project(':data:topic-schema')
+        api project(':data:rbac-schema')
         api project(':ledger:ledger-common')
         api project(':ledger:ledger-consensual')
         api project(':ledger:ledger-utxo')
