--- a/ledger/ledger-common/build.gradle
+++ b/ledger/ledger-common/build.gradle
@@ -11,6 +11,7 @@ dependencies {
 
     api platform(project(':corda-api'))
     api 'net.corda.kotlin:kotlin-stdlib-jdk8-osgi'
+    api project(":application")
 
     testImplementation project(':crypto')
     testImplementation "org.assertj:assertj-core:$assertjVersion"
