--- a/ledger/ledger-utxo/build.gradle
+++ b/ledger/ledger-utxo/build.gradle
@@ -10,4 +10,6 @@ dependencies {
     compileOnly 'org.osgi:osgi.annotation'
 
     api project(':ledger:ledger-common')
+
+    testImplementation "org.assertj:assertj-core:$assertjVersion"
 }
