CORE-4733 Add the interfaces for the notary plugin architecture

--- a/corda-api/build.gradle
+++ b/corda-api/build.gradle
@@ -23,6 +23,7 @@ dependencies {
         api project(':ledger:ledger-common')
         api project(':ledger:ledger-consensual')
         api project(':ledger:ledger-utxo')
+        api project(':ledger:notary-plugin')
         api project(':membership')
         api project(':serialization')
 
