CORE-5075 - remove sandbox cpi identifier changes

--- a/data/topic-schema/src/main/resources/net/corda/schema/VirtualNode.yaml
+++ b/data/topic-schema/src/main/resources/net/corda/schema/VirtualNode.yaml
@@ -41,13 +41,13 @@ topics:
     consumers:
     producers:
     config:
-  VirtualNodeUpgradeTopic:
-    name: virtual.node.upgrade
+  VirtualNodeAsynchronousRequestTopic:
+    name: virtual.node.asynchronous.request
     consumers:
     producers:
     config:
-  VirtualNodeUpgradeStatusTopic:
-    name: virtual.node.upgrade.status
+  VirtualNodeRequestStatusTopic:
+    name: virtual.node.request.status
     consumers:
     producers:
     config:
