CORE-5553 Added The UTXO Token Observer API to support token selection.

--- a/settings.gradle
+++ b/settings.gradle
@@ -102,6 +102,7 @@ include 'ledger:ledger-common'
 include 'ledger:ledger-consensual'
 include 'ledger:ledger-utxo'
 include 'ledger:notary-plugin'
+include 'ledger:ledger-utxo-observable'
 include 'membership'
 include 'serialization'
 
