--- a/cordapp-configuration/src/main/resources/net/corda/cordapp/cordapp-configuration.properties
+++ b/cordapp-configuration/src/main/resources/net/corda/cordapp/cordapp-configuration.properties
@@ -12,6 +12,7 @@ Corda-Entity-Classes=ANNOTATED;javax.persistence.Entity;ANNOTATED;net.corda.v5.b
 Corda-RPCStartableFlow-Classes=IMPLEMENTS;net.corda.v5.application.flows.RPCStartableFlow
 Corda-InitiatedFlow-Classes=IMPLEMENTS;net.corda.v5.application.flows.ResponderFlow
 Corda-Subflow-Classes=IMPLEMENTS;net.corda.v5.application.flows.Subflow
+Corda-Token-Observer-Classes=IMPLEMENTS;net.corda.v5.ledger.utxo.observer.UtxoLedgerTokenStateObserver
 
 # Corda should adjust this version over time, as required.
 Minimum-Corda-Plugins-Version=7.0.0
