--- a/data/topic-schema/src/main/resources/net/corda/schema/Membership.yaml
+++ b/data/topic-schema/src/main/resources/net/corda/schema/Membership.yaml
@@ -1,4 +1,9 @@
 topics:
+  GroupParametersTopic:
+    name: membership.group.params
+    consumers:
+    producers:
+    config:
   MembershipEventTopic:
     name: membership.event
     consumers:
