--- a/data/topic-schema/src/main/resources/net/corda/schema/P2P.yaml
+++ b/data/topic-schema/src/main/resources/net/corda/schema/P2P.yaml
@@ -74,7 +74,7 @@ topics:
       max.compaction.lag.ms: 604800000
       min.cleanable.dirty.ratio: 0.5
   GatewayRevocationRequestTopic:
-    name: gateway.revocation.request.request
+    name: gateway.revocation.request
     consumers:
     producers:
     config:
