expose notaries via group params

--- a/membership/build.gradle
+++ b/membership/build.gradle
@@ -13,6 +13,7 @@ dependencies {
     compileOnly 'org.osgi:osgi.annotation'
 
     api project(':base')
+    api project(':ledger:ledger-common')
 
     testImplementation "org.assertj:assertj-core:$assertjVersion"
 }
