NOTICK: add logic to publish dokka multimoduleBuild

--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ buildscript {
 
 plugins {
     id 'net.corda.cordapp.cordapp-configuration'
-    id 'org.jetbrains.kotlin.jvm' apply false
+    id 'org.jetbrains.kotlin.jvm'
     id 'org.jetbrains.kotlin.plugin.allopen' apply false
     id 'org.jetbrains.kotlin.plugin.jpa' apply false
     id 'io.gitlab.arturbosch.detekt' apply false
@@ -214,15 +214,6 @@ subprojects {
             from(dokkaHtml.outputDirectory)
         }
 
-        tasks.register('javadocMultiJar', Jar) {
-            description = 'Create JavaDoc Jar from dokka docs'
-            group = 'documentation'
-
-            dependsOn(dokkaHtmlMultiModule)
-            archiveBaseName = jar.archiveBaseName
-            archiveClassifier.set("javadoc")
-            from(dokkaHtmlMultiModule.outputDirectory)
-        }
     }
 
     pluginManager.withPlugin('io.gitlab.arturbosch.detekt'){
@@ -339,36 +330,30 @@ wrapper {
     distributionType = Wrapper.DistributionType.BIN
 }
 
-publishing {
-    publications {
-        apiConfiguration(MavenPublication) {
-            artifact javadocMultiJar
+// Time consuming active we only want to do on a CI in certain circumstances
+if (project.hasProperty('generateJavadocMultiJar')) {
 
-            pom {
-                name = 'Corda API Platform'
-                description = project.description
+    tasks.register('javadocMultiJar', Jar) {
+        description = 'Create mutli module Docs Site Jar'
+        group = 'documentation'
 
-                url = vcsUrl - '.git'
-                scm {
-                    url = vcsUrl
-                }
+        dependsOn dokkaHtmlMultiModule
+        archiveBaseName = jar.archiveBaseName
+        archiveClassifier.set("javadoc")
+        from(dokkaHtmlMultiModule.outputDirectory)
+    }
 
-                licenses {
-                    license {
-                        name = licenseName
-                        url = licenseUrl
-                        distribution = 'repo'
-                    }
-                }
-
-                developers {
-                    developer {
-                        id = 'R3'
-                        name = 'R3'
-                        email = 'dev@corda.net'
-                    }
-                }
+    publishing {
+        publications {
+            dokkaDocs(MavenPublication) {
+                artifact javadocMultiJar
+                artifactId "corda-api-Kdocs"
+                groupId 'net.corda'
             }
         }
+    }
+
+    artifactoryPublish {
+        publications('dokkaDocs')
     }
 }
