Add missed link-manager permissions

--- a/data/topic-schema/src/main/resources/net/corda/schema/P2P.yaml
+++ b/data/topic-schema/src/main/resources/net/corda/schema/P2P.yaml
@@ -74,6 +74,7 @@ topics:
     name: gateway.tls.certs
     consumers:
       - gateway
+      - link-manager
     producers:
       - link-manager
     config:
@@ -87,6 +88,7 @@ topics:
     name: gateway.tls.truststores
     consumers:
       - gateway
+      - link-manager
     producers:
       - link-manager
     config:
