Add rpc consumer/ producer to crypto ops topic

--- a/data/topic-schema/src/main/resources/net/corda/schema/Crypto.yaml
+++ b/data/topic-schema/src/main/resources/net/corda/schema/Crypto.yaml
@@ -25,16 +25,18 @@ topics:
     consumers:
       - crypto
     producers:
-      - membership
       - gateway
       - link-manager
+      - membership
+      - rpc
     config:
   CryptoOpsRpcResponseTopic:
     name: crypto.ops.rpc.resp
     consumers:
-      - membership
       - gateway
       - link-manager
+      - membership
+      - rpc
     producers:
       - crypto
     config:
