Add rpc consumer/ producer to crypto hsm topic

--- a/data/topic-schema/src/main/resources/net/corda/schema/Crypto.yaml
+++ b/data/topic-schema/src/main/resources/net/corda/schema/Crypto.yaml
@@ -5,11 +5,13 @@ topics:
       - crypto
     producers:
       - membership
+      - rpc
     config:
   CryptoHSMRPCRegistrationRespTopic:
     name: crypto.hsm.rpc.registration.resp
     consumers:
       - membership
+      - rpc
     producers:
       - crypto
     config:
