Add membership to p2p.out.markers

--- a/data/topic-schema/src/main/resources/net/corda/schema/P2P.yaml
+++ b/data/topic-schema/src/main/resources/net/corda/schema/P2P.yaml
@@ -19,6 +19,7 @@ topics:
     name: p2p.out.markers
     consumers:
       - link-manager
+      - membership
     producers:
       - link-manager
     config:
