NOTICK: Update shared lib to feature branch & comment out snyk ignore to test

--- a/base/build.gradle
+++ b/base/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.jvm'
     id 'corda.common-publishing'
 }
-
+//Update to trigger Snyk Delta
 description 'Corda Base'
 
 dependencies {
