--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,14 @@ import static org.gradle.api.JavaVersion.VERSION_11
 import static org.gradle.jvm.toolchain.JavaLanguageVersion.of
 
 buildscript {
-    ext {
+    Properties cordaInternalDependencies = new Properties()
+    file("$projectDir/cordaInternalDependencies.properties").withInputStream { InputStream input -> cordaInternalDependencies.load(input) }
+    ext{
+        cordaApiRevision = cordaInternalDependencies.getProperty("cordaApiVersion")
+        internalPublishVersion = cordaInternalDependencies.getProperty("internalPublishVersion")
+        cordaProductVersion = cordaInternalDependencies.getProperty("cordaProductVersion")
         vcsUrl = System.getenv('GIT_URL') ?: 'https://github.com/corda/corda-api.git'
-    }
+    }     
     
     dependencies {
         classpath "org.jetbrains.dokka:dokka-core:$dokkaVersion"
