--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -8,7 +8,7 @@ repositories {
 
 // We can't get the values directly from `gradle.properties` from here for some gradle-y reason.
 // So we'll load it into our own object to grab what we need.
-def constants = new Properties()
+Properties constants = new Properties()
 file("$rootDir/../gradle.properties").withInputStream { InputStream input -> constants.load(input) }
 def bndVersion = constants.getProperty('bndVersion')
 def artifactoryContextUrl = constants.getProperty('artifactoryContextUrl')
