NOTICK: test publishing

--- a/gradle.properties
+++ b/gradle.properties
@@ -27,7 +27,7 @@ artifactoryContextUrl = https://software.r3.com/artifactory
 # Gradle
 # dokka need more metaspace - https://github.com/Kotlin/dokka/issues/1405
 org.gradle.jvmargs=-XX:MaxMetaspaceSize=2g
-internalPublishVersion = 1.+
+internalPublishVersion =0.1-alpha-1674146642854
 dokkaVersion = 1.7.+
 detektPluginVersion = 1.21.+
 dependencyCheckVersion=0.42.+
