Add link manager as consumer

--- a/data/topic-schema/src/main/resources/net/corda/schema/P2P.yaml
+++ b/data/topic-schema/src/main/resources/net/corda/schema/P2P.yaml
@@ -88,6 +88,7 @@ topics:
   P2PAllAllowedClientCertificateSubjects:
     name: p2p.all.allowed.client.certificate.subjects
     consumers:
+      - link-manager
       - gateway
     producers:
       - link-manager
