--- a/data/topic-schema/src/main/resources/net/corda/schema/P2P.yaml
+++ b/data/topic-schema/src/main/resources/net/corda/schema/P2P.yaml
@@ -86,7 +86,7 @@ topics:
       max.compaction.lag.ms: 604800000
       min.cleanable.dirty.ratio: 0.5
   P2PAllAllowedClientCertificateSubjects:
-    name: p2p.all.allowed.client.certificate.subjects
+    name: gateway.allowed.client.certificate.subjects
     consumers:
       - link-manager
       - gateway
