--- a/settings.gradle
+++ b/settings.gradle
@@ -124,7 +124,9 @@ gradleEnterprise {
             removeUnusedEntriesAfterDays = 14  // Garbage collect if a cache item is not used in 2 weeks.
         }
         remote(gradleEnterprise.buildCache) {
-            accessKey = apiKey
+            if (apiKey?.trim()) {
+                accessKey = apiKey
+            }
             // For the remote build cache we will populate cache only from Jenkins, all machines can pull from cache however.
             if (System.getenv().containsKey("JENKINS_URL")) {
                 push = true
