--- a/settings.gradle
+++ b/settings.gradle
@@ -124,14 +124,15 @@ gradleEnterprise {
             removeUnusedEntriesAfterDays = 14  // Garbage collect if a cache item is not used in 2 weeks.
         }
         remote(gradleEnterprise.buildCache) {
-            if (apiKey?.trim()) {
-                accessKey = apiKey
-            }
             // For the remote build cache we will populate cache only from Jenkins, all machines can pull from cache however.
             if (System.getenv().containsKey("JENKINS_URL")) {
+                username = settings.ext.find('BUILD_CACHE_CREDENTIALS_USR') ?: System.getenv('BUILD_CACHE_CREDENTIALS_USR')
+                password = settings.ext.find('BUILD_CACHE_CREDENTIALS_PSW') ?: System.getenv('BUILD_CACHE_CREDENTIALS_PSW')
+                usernameAndPassword("${username}", "${password}")
                 push = true
                 enabled = true
             } else {
+                accessKey = apiKey
                 push = false
                 enabled = true
             }
