--- a/settings.gradle
+++ b/settings.gradle
@@ -130,7 +130,7 @@ gradleEnterprise {
                 enabled = true
             } else {
                 push = false
-                enabled = true
+                enabled = apiKey?.trim() ? true : false
             }
         }
     }
