--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@
 # their own projects. So don't get fancy with syntax!
 
 # Versioning
-cordaProductVersion = 5.0.0
+cordaProductVersion = 5.0.0-INTEROP
 # NOTE: update this each time this module contains a breaking change
 ## NOTE: currently this is a top level revision, so all API versions will line up, but this could be moved to
 ##   a per module property in which case module versions can change independently.
