--- a/application/build.gradle
+++ b/application/build.gradle
@@ -4,6 +4,8 @@ plugins {
     id 'corda.common-publishing'
 }
 
+//Making a change to build.gradle to trigger Snyk Delta - DO NOT MERGE 
+
 description 'Corda Application'
 
 dependencies {
