Enable access to more topics for interop

--- a/data/topic-schema/src/main/resources/net/corda/schema/Flow.yaml
+++ b/data/topic-schema/src/main/resources/net/corda/schema/Flow.yaml
@@ -33,9 +33,11 @@ topics:
     name: flow.mapper.event
     consumers:
       - flow
+      - interop
     producers:
       - flow
       - rpc
+      - interop
     config:
   FlowMapperEventStateTopic:
     name: flow.mapper.event.state
