--- a/data/topic-schema/src/main/resources/net/corda/schema/Membership.yaml
+++ b/data/topic-schema/src/main/resources/net/corda/schema/Membership.yaml
@@ -10,6 +10,7 @@ topics:
     producers:
       - db
       - membership
+      - interop
     config:
       cleanup.policy: compact
       segment.ms: 600000
@@ -22,6 +23,7 @@ topics:
     consumers:
     producers:
       - membership
+      - interop
     config:
   MembershipRegistrationTopic:
     name: membership.registration
@@ -54,6 +56,7 @@ topics:
     producers:
       - membership
       - db
+      - interop
     config:
       cleanup.policy: compact
       segment.ms: 600000
