Enable access to more topics for interop

--- a/data/topic-schema/src/main/resources/net/corda/schema/P2P.yaml
+++ b/data/topic-schema/src/main/resources/net/corda/schema/P2P.yaml
@@ -53,6 +53,7 @@ topics:
     producers:
       - rpc # Dynamic Network registration
       - membership # Static Network registration
+      - interop # temporary hardcoded data
     config:
       cleanup.policy: compact
       segment.ms: 600000
