Enable access to seed message (temporarily) for interop processor.

--- a/data/topic-schema/src/main/resources/net/corda/schema/P2P.yaml
+++ b/data/topic-schema/src/main/resources/net/corda/schema/P2P.yaml
@@ -7,6 +7,7 @@ topics:
       - interop
     producers:
       - link-manager
+      - interop #Temporarily for seed message
     config:
   P2POutTopic:
     name: p2p.out
