--- a/buildSrc/src/main/groovy/corda.java-only.gradle
+++ b/buildSrc/src/main/groovy/corda.java-only.gradle
@@ -1,9 +1,9 @@
-plugins {
-    id 'org.jetbrains.kotlin.jvm'
+pluginManager.withPlugin('org.jetbrains.kotlin.jvm') {
+    throw new StopExecutionException("Module '${project.path}' should only contain Java classes")
 }
 
-tasks.named('compileKotlin') {
-    doFirst {
-        throw new InvalidUserCodeException("Module '${project.path}' should only contain Java classes")
+pluginManager.withPlugin('java') {
+    java {
+        withJavadocJar()
     }
 }
