CORE-9865 Enable access for Kafka topics needed for InteropProcessor (also for CORE-9847, CORE-9848)  (#869)
Added interop user as consumer (c) or producer (p) to the following Kafka topics (to be able to connect):
1) for CORE-9848:
1.1) membership.members : p (temporary, for CORE-9848)
1.2) membership.event : p (speculative, for CORE-9848)
2) for CORE-9847:
2.1) p2p.hosted.identities : p (temporary)
3) for CORE-9865:
3.1) p2p.in : p (temporary for a seed message), c
3.2) p2p.out : p

--- a/data/topic-schema/src/main/resources/net/corda/schema/Membership.yaml
+++ b/data/topic-schema/src/main/resources/net/corda/schema/Membership.yaml
@@ -22,6 +22,7 @@ topics:
     consumers:
     producers:
       - membership
+      - interop
     config:
   MembershipRegistrationTopic:
     name: membership.registration
@@ -54,6 +55,7 @@ topics:
     producers:
       - membership
       - db
+      - interop
     config:
       cleanup.policy: compact
       segment.ms: 600000
