--- a/data/topic-schema/src/main/resources/net/corda/schema/P2P.yaml
+++ b/data/topic-schema/src/main/resources/net/corda/schema/P2P.yaml
@@ -51,6 +51,7 @@ topics:
     consumers:
       - link-manager
       - membership
+      - interop
     producers:
       - rpc # Dynamic Network registration
       - membership # Static Network registration
