CORE-11412 fixed consumer/producer worker lists

--- a/data/topic-schema/src/main/resources/net/corda/schema/VirtualNode.yaml
+++ b/data/topic-schema/src/main/resources/net/corda/schema/VirtualNode.yaml
@@ -86,8 +86,9 @@ topics:
   VirtualNodeOperationStatusTopic:
     name: virtual.node.operation.status
     consumers:
-      - db
+      - rest
     producers:
+      - db
       - rest
     config:
       cleanup.policy: compact
