New Interop topic under Flow topics.

--- a/data/topic-schema/src/main/resources/net/corda/schema/Flow.yaml
+++ b/data/topic-schema/src/main/resources/net/corda/schema/Flow.yaml
@@ -37,6 +37,14 @@ topics:
       - flow
       - rest
     config:
+  FlowInteropEventTopic:
+    name: flow.interop.event
+    consumers:
+      - interop
+    producers:
+      - flow
+      - interop
+    config:
   FlowMapperEventStateTopic:
     name: flow.mapper.event.state
     consumers:
